# genifest

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  Makefile  README.md  manifest-static-example.yaml  manifest-template.yaml  mkdocs.yml  package-lock.json  package.json  prometheus.yaml  pyproject.toml  setup.py  sonar-project.properties
docker/: Dockerfile  buildtags.py  requirements.txt
docs/: index.md
genifest/: __init__.py  cli.py  extract.py  logger.py  main.py  transform.py  write.py
tests/: test_cli.py
